cluster/apps/orrery/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: orrery
    app.kubernetes.io/version: 73b9f0b
  name: orrery
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: orrery
  template:
    metadata:
      labels:
        app.kubernetes.io/name: orrery
        app.kubernetes.io/version: 73b9f0b
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/orrery:73b9f0b@sha256:026e7ce38085141dcc4b1fca22b4764f3c235113287ea87094814c1e96d1ccd1
        name: orrery
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /data
          name: layout-volume
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      volumes:
      - name: layout-volume
        persistentVolumeClaim:
          claimName: orrery-layout-pvc
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
