cluster/apps/orrery/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: orrery
    app.kubernetes.io/version: 41808ac
  name: orrery
spec:
  selector:
    app.kubernetes.io/name: orrery
  ports:
  - name: http
    port: 8080
    targetPort: 8080
